--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 .first {
     background-color: #1F2937;
     color: white;
+    
 }
 
 .header {
     display: flex;
     justify-content: space-between;  
-    margin-bottom: 50px;  
+    margin-bottom: 30px;  
 }
 .title {
     font-size: 24px;
@@ -32,6 +33,7 @@
 .info {
     box-sizing: border-box;
     width: 350px;
+    margin-bottom: 100px;
 }
 .hero {
     display: flex;
@@ -50,11 +52,58 @@
     color: white;
     padding: 5px;
     font-size: 16px;
-    background-color: grey;
+    background-color: #3882f6;
     border-radius: 8px;
     border: 2px solid white;    
 }
 img {
     margin-top: 50px;
     border-radius: 20px;
+    
+}
+.second { 
+    display: flex;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    justify-content: center;
+    font-size: 50px;
+    box-sizing: border-box;
+    height: 100px;
+
+
+}
+.seconds ul {
+    list-style-type: none;
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    margin-top: 0px;
+    
+}
+.details {
+    display: flex;
+    width: 200px;
+    height: 150px;
+    box-sizing: border-box;
+    
+    
+}
+.third {
+    background-color: #E5E7EB;
+    
+}
+.quote {
+   
+   font-size: 36px;
+   color: #1F2937;
+   width: 700px;
+   margin: auto;
+   padding-top: 50px;
+}
+.unknown {
+    font-size: 36px;
+    color: #1F2937;
+    width: 600px;
+    padding-left: 800px;
+    margin-top: 10px;
 }
