--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-between;  
     margin-bottom: 30px;  
+    flex-wrap: wrap;
 }
 .title {
     font-size: 24px;
@@ -29,6 +30,7 @@
    display: flex;
    gap: 100px;
    margin-left: 200px;
+   flex-wrap: wrap;
 }
 .info {
     box-sizing: border-box;
@@ -54,11 +56,15 @@
     font-size: 16px;
     background-color: #3882f6;
     border-radius: 8px;
-    border: 2px solid white;    
+    border: 2px solid #E5E7EB;    
+}
+.button:hover {
+    background-color: gainsboro;
 }
 img {
     margin-top: 50px;
     border-radius: 20px;
+    
     
 }
 .second { 
@@ -78,6 +84,7 @@ img {
     gap: 50px;
     justify-content: center;
     margin-top: 0px;
+    flex-wrap: wrap;
     
 }
 .details {
@@ -88,17 +95,23 @@ img {
     
     
 }
-.third {
+.third  {
+    display: flex;
     background-color: #E5E7EB;
+    flex-direction: column;
+    flex-wrap: wrap;
+    
+    
+    
     
 }
 .quote {
-   
    font-size: 36px;
    color: #1F2937;
    width: 700px;
    margin: auto;
    padding-top: 50px;
+   
 }
 .unknown {
     font-size: 36px;
@@ -106,4 +119,48 @@ img {
     width: 600px;
     padding-left: 800px;
     margin-top: 10px;
+    margin-bottom: 0px;
+    padding-bottom: 50px;
+    
+}
+.fourth {
+    display: flex;
+    background-color: #3882f6;
+    color: #E5E7EB;
+    box-sizing: border-box;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-bottom: 50px;
+    padding: 20px 100px;
+    justify-content: space-between;
+    border-radius: 20px;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    
+}
+.start {
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    margin-bottom: 0px;
+}
+.buttons {
+    font-size: 20px;
+    border-radius: 10px;
+    background-color: #3882f6;
+    border: 2px solid #E5E7EB;
+    color: white;
+    padding: 10px 20px;
+    margin-top: 25px;
+}
+.buttons:hover {
+    background-color: gainsboro;
+}
+.fifth {
+    display: flex;
+    background-color: #1F2937;
+    color: #f9faf8;
+    justify-content: center;
+    padding: 10px 0px;
+    flex-wrap: wrap;
 }
